--- a/history/index.html
+++ b/history/index.html
@@ -34,21 +34,21 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>History | JW Guitar Tabs</title><meta name="description" content="See songs you&#39;ve recently visited or played in this website." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/internal/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/internal/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/internal/assets/ComingSoon-563c65f1.css">
-	<link rel="modulepreload" href="/internal/start-01f209a7.js">
-	<link rel="modulepreload" href="/internal/chunks/vendor-31fb96ee.js">
-	<link rel="modulepreload" href="/internal/chunks/preload-helper-eaf481c8.js">
-	<link rel="modulepreload" href="/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/internal/pages/__layout.svelte-f02709b5.js">
-	<link rel="modulepreload" href="/internal/chunks/helperFunctions-43c0a077.js">
-	<link rel="modulepreload" href="/internal/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/internal/chunks/NewTabLink-11e59303.js">
-	<link rel="modulepreload" href="/internal/pages/history.svelte-32c20807.js">
-	<link rel="modulepreload" href="/internal/chunks/MetaHead-0449a848.js">
-	<link rel="modulepreload" href="/internal/chunks/ComingSoon-48141a71.js"><script type="module">
-		import { start } from "/internal/start-01f209a7.js";
+	<link rel="stylesheet" href="/_app/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/_app/assets/ComingSoon-563c65f1.css">
+	<link rel="modulepreload" href="/_app/start-619e4ba9.js">
+	<link rel="modulepreload" href="/_app/chunks/vendor-31fb96ee.js">
+	<link rel="modulepreload" href="/_app/chunks/preload-helper-ec9aa979.js">
+	<link rel="modulepreload" href="/_app/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-f02709b5.js">
+	<link rel="modulepreload" href="/_app/chunks/helperFunctions-43c0a077.js">
+	<link rel="modulepreload" href="/_app/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/_app/chunks/NewTabLink-11e59303.js">
+	<link rel="modulepreload" href="/_app/pages/history.svelte-32c20807.js">
+	<link rel="modulepreload" href="/_app/chunks/MetaHead-0449a848.js">
+	<link rel="modulepreload" href="/_app/chunks/ComingSoon-48141a71.js"><script type="module">
+		import { start } from "/_app/start-619e4ba9.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
@@ -60,8 +60,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/internal/pages/__layout.svelte-f02709b5.js"),
-						import("/internal/pages/history.svelte-32c20807.js")
+					import("/_app/pages/__layout.svelte-f02709b5.js"),
+						import("/_app/pages/history.svelte-32c20807.js")
 				],
 				url: new URL("http://sveltekit-prerender/history"),
 				params: {}
