--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>Home | JW Guitar Tabs</title><meta name="description" content="JW Guitar Tabs is a website where people who love our JW songs can\nenjoy playing the simplest tabs on their guitar." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/_app/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-be2c93a6.css">
-	<link rel="modulepreload" href="/_app/start-619e4ba9.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-31fb96ee.js">
-	<link rel="modulepreload" href="/_app/chunks/preload-helper-ec9aa979.js">
-	<link rel="modulepreload" href="/_app/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-f02709b5.js">
-	<link rel="modulepreload" href="/_app/chunks/helperFunctions-43c0a077.js">
-	<link rel="modulepreload" href="/_app/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/_app/chunks/NewTabLink-11e59303.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-27d6a7b9.js">
-	<link rel="modulepreload" href="/_app/chunks/MetaHead-0449a848.js"><script type="module">
-		import { start } from "/_app/start-619e4ba9.js";
+	<link rel="stylesheet" href="/internal/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/internal/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/internal/assets/pages/index.svelte-be2c93a6.css">
+	<link rel="modulepreload" href="/internal/start-01f209a7.js">
+	<link rel="modulepreload" href="/internal/chunks/vendor-31fb96ee.js">
+	<link rel="modulepreload" href="/internal/chunks/preload-helper-eaf481c8.js">
+	<link rel="modulepreload" href="/internal/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/internal/pages/__layout.svelte-f02709b5.js">
+	<link rel="modulepreload" href="/internal/chunks/helperFunctions-43c0a077.js">
+	<link rel="modulepreload" href="/internal/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/internal/chunks/NewTabLink-11e59303.js">
+	<link rel="modulepreload" href="/internal/pages/index.svelte-26aa25ff.js">
+	<link rel="modulepreload" href="/internal/chunks/MetaHead-0449a848.js"><script type="module">
+		import { start } from "/internal/start-01f209a7.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"","assets":""},
@@ -59,8 +59,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-f02709b5.js"),
-						import("/_app/pages/index.svelte-27d6a7b9.js")
+					import("/internal/pages/__layout.svelte-f02709b5.js"),
+						import("/internal/pages/index.svelte-26aa25ff.js")
 				],
 				url: new URL("http://sveltekit-prerender/"),
 				params: {}
