--- a/history/index.html
+++ b/history/index.html
@@ -34,24 +34,24 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>History | JW Guitar Tabs</title><meta name="description" content="See songs you&#39;ve recently visited or played in this website." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/app_/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/app_/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/app_/assets/ComingSoon-563c65f1.css">
-	<link rel="modulepreload" href="/app_/start-4a47f32e.js">
-	<link rel="modulepreload" href="/app_/chunks/vendor-a14c9fe5.js">
-	<link rel="modulepreload" href="/app_/chunks/preload-helper-56798db9.js">
-	<link rel="modulepreload" href="/app_/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/app_/pages/__layout.svelte-1a4c1c71.js">
-	<link rel="modulepreload" href="/app_/chunks/helperFunctions-2523e54d.js">
-	<link rel="modulepreload" href="/app_/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/app_/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/app_/pages/history.svelte-5c11bf3c.js">
-	<link rel="modulepreload" href="/app_/chunks/MetaHead-2dfdfdb5.js">
-	<link rel="modulepreload" href="/app_/chunks/ComingSoon-93fd158d.js"><script type="module">
-		import { start } from "/app_/start-4a47f32e.js";
+	<link rel="stylesheet" href="/jw-guitar-tabs/_app/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/_app/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/_app/assets/ComingSoon-563c65f1.css">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/start-f2cb78e8.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/vendor-a14c9fe5.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/preload-helper-beb82684.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/pages/__layout.svelte-1a4c1c71.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/helperFunctions-2523e54d.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/NewTabLink-c0c9f34a.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/pages/history.svelte-5c11bf3c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/MetaHead-2dfdfdb5.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/_app/chunks/ComingSoon-93fd158d.js"><script type="module">
+		import { start } from "/jw-guitar-tabs/_app/start-f2cb78e8.js";
 		start({
 			target: document.querySelector("#svelte"),
-			paths: {"base":"","assets":""},
+			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
 			spa: false,
@@ -60,10 +60,10 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/app_/pages/__layout.svelte-1a4c1c71.js"),
-						import("/app_/pages/history.svelte-5c11bf3c.js")
+					import("/jw-guitar-tabs/_app/pages/__layout.svelte-1a4c1c71.js"),
+						import("/jw-guitar-tabs/_app/pages/history.svelte-5c11bf3c.js")
 				],
-				url: new URL("http://sveltekit-prerender/history"),
+				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/history"),
 				params: {}
 			}
 		});
