--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>Home | JW Guitar Tabs</title><meta name="description" content="JW Guitar Tabs is a website where people who love our JW songs can\nenjoy playing the simplest tabs on their guitar." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/_app/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-be2c93a6.css">
-	<link rel="modulepreload" href="/_app/start-d57838ec.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-a14c9fe5.js">
-	<link rel="modulepreload" href="/_app/chunks/preload-helper-ec9aa979.js">
-	<link rel="modulepreload" href="/_app/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-1a4c1c71.js">
-	<link rel="modulepreload" href="/_app/chunks/helperFunctions-2523e54d.js">
-	<link rel="modulepreload" href="/_app/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/_app/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-8d4db3ff.js">
-	<link rel="modulepreload" href="/_app/chunks/MetaHead-2dfdfdb5.js"><script type="module">
-		import { start } from "/_app/start-d57838ec.js";
+	<link rel="stylesheet" href="/jw-guitar-tabs/app_/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/app_/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/app_/assets/pages/index.svelte-be2c93a6.css">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/start-90cf19a2.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/vendor-a14c9fe5.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/preload-helper-18a6fd7c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/pages/__layout.svelte-1a4c1c71.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/helperFunctions-2523e54d.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/NewTabLink-c0c9f34a.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/pages/index.svelte-e13b85e6.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/MetaHead-2dfdfdb5.js"><script type="module">
+		import { start } from "/jw-guitar-tabs/app_/start-90cf19a2.js";
 		start({
 			target: document.querySelector("#svelte"),
-			paths: {"base":"","assets":""},
+			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
 			spa: false,
@@ -59,10 +59,10 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-1a4c1c71.js"),
-						import("/_app/pages/index.svelte-8d4db3ff.js")
+					import("/jw-guitar-tabs/app_/pages/__layout.svelte-1a4c1c71.js"),
+						import("/jw-guitar-tabs/app_/pages/index.svelte-e13b85e6.js")
 				],
-				url: new URL("http://sveltekit-prerender/"),
+				url: new URL("http://sveltekit-prerender/jw-guitar-tabs"),
 				params: {}
 			}
 		});
