--- a/about/index.html
+++ b/about/index.html
@@ -34,23 +34,23 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>About | JW Guitar Tabs</title><meta name="description" content="Learn more about the purpose of JW Guitar Tabs and how you can contribute/support this project." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/jw-guitar-tabs/app_/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/app_/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/app_/assets/pages/about.svelte-41e52dde.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/start-90cf19a2.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/vendor-a14c9fe5.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/preload-helper-18a6fd7c.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/pages/__layout.svelte-1a4c1c71.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/helperFunctions-2523e54d.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/pages/about.svelte-cc8ce57a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/app_/chunks/MetaHead-2dfdfdb5.js"><script type="module">
-		import { start } from "/jw-guitar-tabs/app_/start-90cf19a2.js";
+	<link rel="stylesheet" href="/app_/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/app_/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/app_/assets/pages/about.svelte-41e52dde.css">
+	<link rel="modulepreload" href="/app_/start-4a47f32e.js">
+	<link rel="modulepreload" href="/app_/chunks/vendor-a14c9fe5.js">
+	<link rel="modulepreload" href="/app_/chunks/preload-helper-56798db9.js">
+	<link rel="modulepreload" href="/app_/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/app_/pages/__layout.svelte-1a4c1c71.js">
+	<link rel="modulepreload" href="/app_/chunks/helperFunctions-2523e54d.js">
+	<link rel="modulepreload" href="/app_/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/app_/chunks/NewTabLink-c0c9f34a.js">
+	<link rel="modulepreload" href="/app_/pages/about.svelte-cc8ce57a.js">
+	<link rel="modulepreload" href="/app_/chunks/MetaHead-2dfdfdb5.js"><script type="module">
+		import { start } from "/app_/start-4a47f32e.js";
 		start({
 			target: document.querySelector("#svelte"),
-			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
+			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
 			spa: false,
@@ -59,10 +59,10 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/jw-guitar-tabs/app_/pages/__layout.svelte-1a4c1c71.js"),
-						import("/jw-guitar-tabs/app_/pages/about.svelte-cc8ce57a.js")
+					import("/app_/pages/__layout.svelte-1a4c1c71.js"),
+						import("/app_/pages/about.svelte-cc8ce57a.js")
 				],
-				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/about"),
+				url: new URL("http://sveltekit-prerender/about"),
 				params: {}
 			}
 		});
