--- a/about/index.html
+++ b/about/index.html
@@ -34,23 +34,23 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content=""><title>About | JW Guitar Tabs</title><meta name="description" content="Learn more about the purpose of JW Guitar Tabs and how you can contribute/support this project." data-svelte="svelte-p7l4te">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/about.svelte-41e52dde.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-46465910.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-a14c9fe5.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-1a4c1c71.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-2523e54d.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/about.svelte-cc8ce57a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js"><script type="module">
-		import { start } from "/jw-guitar-tabs/internal/start-46465910.js";
+	<link rel="stylesheet" href="/internal/assets/vendor-77f1925a.css">
+	<link rel="stylesheet" href="/internal/assets/pages/__layout.svelte-65152709.css">
+	<link rel="stylesheet" href="/internal/assets/pages/about.svelte-41e52dde.css">
+	<link rel="modulepreload" href="/internal/start-c1e11a20.js">
+	<link rel="modulepreload" href="/internal/chunks/vendor-a14c9fe5.js">
+	<link rel="modulepreload" href="/internal/chunks/preload-helper-eaf481c8.js">
+	<link rel="modulepreload" href="/internal/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/internal/pages/__layout.svelte-1a4c1c71.js">
+	<link rel="modulepreload" href="/internal/chunks/helperFunctions-2523e54d.js">
+	<link rel="modulepreload" href="/internal/chunks/navigation-bd39ff07.js">
+	<link rel="modulepreload" href="/internal/chunks/NewTabLink-c0c9f34a.js">
+	<link rel="modulepreload" href="/internal/pages/about.svelte-cc8ce57a.js">
+	<link rel="modulepreload" href="/internal/chunks/MetaHead-2dfdfdb5.js"><script type="module">
+		import { start } from "/internal/start-c1e11a20.js";
 		start({
 			target: document.querySelector("#svelte"),
-			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
+			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
 			spa: false,
@@ -59,10 +59,10 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-1a4c1c71.js"),
-						import("/jw-guitar-tabs/internal/pages/about.svelte-cc8ce57a.js")
+					import("/internal/pages/__layout.svelte-1a4c1c71.js"),
+						import("/internal/pages/about.svelte-cc8ce57a.js")
 				],
-				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/about"),
+				url: new URL("http://sveltekit-prerender/about"),
 				params: {}
 			}
 		});
