--- a/about/index.html
+++ b/about/index.html
@@ -37,17 +37,18 @@
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-65152709.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/about.svelte-41e52dde.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-9f4f1bb3.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-467fc5b0.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-a14c9fe5.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-6ae34fac.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-1a4c1c71.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-4b3c6e7e.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-d31960fd.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-2523e54d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/about.svelte-cc8ce57a.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/about.svelte-8383b8db.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js"><script type="module">
-		import { start } from "/jw-guitar-tabs/internal/start-9f4f1bb3.js";
+		import { start } from "/jw-guitar-tabs/internal/start-467fc5b0.js";
 		start({
 			target: document.querySelector("#svelte"),
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
@@ -59,8 +60,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-1a4c1c71.js"),
-						import("/jw-guitar-tabs/internal/pages/about.svelte-cc8ce57a.js")
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-d31960fd.js"),
+						import("/jw-guitar-tabs/internal/pages/about.svelte-8383b8db.js")
 				],
 				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/about"),
 				params: {}
@@ -115,17 +116,17 @@
 </h1>
 </div>
 	<div class="mdc-drawer__content"><nav class="mdc-deprecated-list" role="list">
-<a href="/" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">home</span>
+<a href="/jw-guitar-tabs/" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">home</span>
 	<span class="mdc-deprecated-list-item__text">Home</span></a>
 
 			
-<a href="/favorites" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">favorite_outline</span>
+<a href="/jw-guitar-tabs/favorites" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">favorite_outline</span>
 	<span class="mdc-deprecated-list-item__text">Favorites</span></a>
-<a href="/history" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">history</span>
+<a href="/jw-guitar-tabs/history" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">history</span>
 	<span class="mdc-deprecated-list-item__text">History</span></a>
-<a href="/settings" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">settings</span>
+<a href="/jw-guitar-tabs/settings" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">settings</span>
 	<span class="mdc-deprecated-list-item__text">Settings</span></a>
-<a href="/about" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">help_outline</span>
+<a href="/jw-guitar-tabs/about" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">help_outline</span>
 	<span class="mdc-deprecated-list-item__text">About</span></a>
 
 			<nav class="mdc-deprecated-list" role="list">
@@ -133,11 +134,11 @@
 			<h6 class="mdc-deprecated-list-group__subheader">Song Categories
 </h6>
 			
-<a href="/categories/kingdom-songs" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">queue_music</span>
+<a href="/jw-guitar-tabs/categories/kingdom-songs" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">queue_music</span>
 	<span class="mdc-deprecated-list-item__text">Kingdom Songs</span></a>
-<a href="/categories/original-songs" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">queue_music</span>
+<a href="/jw-guitar-tabs/categories/original-songs" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">queue_music</span>
 	<span class="mdc-deprecated-list-item__text">Original Songs</span></a>
-<a href="/categories/children-songs" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">queue_music</span>
+<a href="/jw-guitar-tabs/categories/children-songs" class="mdc-deprecated-list-item" style="" tabindex="-1"><span class="mdc-deprecated-list-item__ripple"></span><span class="material-icons mdc-deprecated-list-item__graphic" aria-hidden="true">queue_music</span>
 	<span class="mdc-deprecated-list-item__text">Children&#39;s Songs</span></a>
 </nav>
 </div>
@@ -158,8 +159,8 @@
 <h2>Purpose</h2>
 <p>We not only love singing and listening to our Kingdom, Original, and Children&#39;s songs—we&#39;re also
 	moved by it so we play them on our guitars for entertainment, during free times, and most
-	importantly, for worship. <a href="/">JW Guitar Tabs</a> is a website where people who love our JW
-	songs can enjoy playing the simplest tabs on their guitars.
+	importantly, for worship. <a href="/jw-guitar-tabs">JW Guitar Tabs</a> is a website where people who love our
+	JW songs can enjoy playing the simplest tabs on their guitars.
 </p>
 
 <h3>Why build a website for JWGT?</h3>
@@ -179,7 +180,7 @@
 <p>Thanks for coming and enjoy!</p>
 
 <h2>Copyright &amp; Terms Of Use</h2>
-<p>You may read Copyright &amp; Terms Of Use <a href="/copyright">here</a>.
+<p>You may read Copyright &amp; Terms Of Use <a href="/jw-guitar-tabs/copyright">here</a>.
 </p>
 
 <h2>Credits</h2>
@@ -200,8 +201,8 @@
 		</a><a href="https://www.mongodb.com/" target="_blank" rel="noreferrer" class="svelte-jr2fx1"><img src="img/official-logos/mongodb-logo.png" alt="logo for https://www.mongodb.com/" class="ui logo circular tiny image svelte-jr2fx1">
 		</a>
 </div></div>
-<p class="footer svelte-nmkwa5"><a href="/copyright">Copyright</a> © 2022 |
-	<a href="/copyright">Terms of Use</a> | JW Guitar Tabs |
+<p class="footer svelte-nmkwa5"><a href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
+	<a href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
