--- a/copyright/index.html
+++ b/copyright/index.html
@@ -36,37 +36,17 @@
 		<meta http-equiv="content-security-policy" content=""><title>Copyright &amp; Terms of Use | JW Guitar Tabs</title><meta name="description" content="These Terms of Use govern your use of this website. By using this website, you accept these Terms of Use, together with any Additional Terms of Use set forth on this website, in full." data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-65152709.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-a397fad0.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-1aa25cd5.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-a14c9fe5.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-4b3c6e7e.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-d09accd1.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-e6609f28.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-2523e54d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-c0c9f34a.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/copyright.svelte-942ef0c0.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js"><script type="module">
-		import { start } from "/jw-guitar-tabs/internal/start-a397fad0.js";
-		start({
-			target: document.querySelector("#svelte"),
-			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
-			session: {},
-			route: true,
-			spa: false,
-			trailing_slash: "never",
-			hydrate: {
-				status: 200,
-				error: null,
-				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-d09accd1.js"),
-						import("/jw-guitar-tabs/internal/pages/copyright.svelte-942ef0c0.js")
-				],
-				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/copyright"),
-				params: {}
-			}
-		});
-	</script>
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js">
 	</head>
 
 	<body>
@@ -236,7 +216,28 @@
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
-</div>
+
+		<script type="module" data-hydrate="1oq8efs">
+		import { start } from "/jw-guitar-tabs/internal/start-1aa25cd5.js";
+		start({
+			target: document.querySelector('[data-hydrate="1oq8efs"]').parentNode,
+			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
+			session: {},
+			route: true,
+			spa: false,
+			trailing_slash: "never",
+			hydrate: {
+				status: 200,
+				error: null,
+				nodes: [
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-e6609f28.js"),
+						import("/jw-guitar-tabs/internal/pages/copyright.svelte-942ef0c0.js")
+				],
+				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/copyright"),
+				params: {}
+			}
+		});
+	</script></div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"
 			crossorigin="anonymous"
