--- a/history/index.html
+++ b/history/index.html
@@ -37,38 +37,18 @@
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-65152709.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/ComingSoon-563c65f1.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-a397fad0.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-1aa25cd5.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-a14c9fe5.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-4b3c6e7e.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-d09accd1.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-e6609f28.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-2523e54d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-c0c9f34a.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/history.svelte-5c11bf3c.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/ComingSoon-93fd158d.js"><script type="module">
-		import { start } from "/jw-guitar-tabs/internal/start-a397fad0.js";
-		start({
-			target: document.querySelector("#svelte"),
-			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
-			session: {},
-			route: true,
-			spa: false,
-			trailing_slash: "never",
-			hydrate: {
-				status: 200,
-				error: null,
-				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-d09accd1.js"),
-						import("/jw-guitar-tabs/internal/pages/history.svelte-5c11bf3c.js")
-				],
-				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/history"),
-				params: {}
-			}
-		});
-	</script>
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/ComingSoon-93fd158d.js">
 	</head>
 
 	<body>
@@ -163,7 +143,28 @@
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
-</div>
+
+		<script type="module" data-hydrate="1ou0if1">
+		import { start } from "/jw-guitar-tabs/internal/start-1aa25cd5.js";
+		start({
+			target: document.querySelector('[data-hydrate="1ou0if1"]').parentNode,
+			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
+			session: {},
+			route: true,
+			spa: false,
+			trailing_slash: "never",
+			hydrate: {
+				status: 200,
+				error: null,
+				nodes: [
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-e6609f28.js"),
+						import("/jw-guitar-tabs/internal/pages/history.svelte-5c11bf3c.js")
+				],
+				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/history"),
+				params: {}
+			}
+		});
+	</script></div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"
 			crossorigin="anonymous"
