--- a/settings/index.html
+++ b/settings/index.html
@@ -35,20 +35,21 @@
 
 		<meta http-equiv="content-security-policy" content=""><title>Settings | JW Guitar Tabs</title><meta name="description" content="Customize these settings to have the feel and look you want for this website!" data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-65152709.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/ComingSoon-563c65f1.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-828a8007.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-a14c9fe5.js">
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/Layout-d27e5246.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/settings.svelte-ba855c49.css">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-ed0ae0be.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-3246f839.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-4b3c6e7e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-60207e75.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-2523e54d.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-d4f3000a.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/stores-77c886c2.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-d39dba89.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/Layout-2a88ddcc.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-c0c9f34a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/settings.svelte-29867e5c.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-2dfdfdb5.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/ComingSoon-93fd158d.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-9a062e2a.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/settings.svelte-94157d97.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-e99e50b4.js">
 	</head>
 
 	<body>
@@ -131,23 +132,28 @@
 <main class="">
 </main>
 
-<div class="main svelte-8cox7o">
+<div class="main svelte-tlojcu">
 
 <h1>Settings</h1>
 
 <div class="svelte-350qv4"><div class="svelte-350qv4"><h3 class="svelte-350qv4">Coming soon! :)</h3>
 		<p style="color: grey;">&quot;I will show a waiting attitude.&quot;—Mic. 7:7.</p></div>
 </div></div>
+<aside class="mdc-snackbar"><div class="mdc-snackbar__surface" role="status" aria-relevant="additions"><span class="mdc-snackbar__label" aria-atomic="false"></span>
+	<div class="mdc-snackbar__actions" aria-atomic="true"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex mdc-snackbar__dismiss" style="" title="Dismiss"><div class="mdc-icon-button__ripple"></div>
+  close</button>
+</div></div>
+</aside>
 <p class="footer svelte-nmkwa5"><a href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
 	<a href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
 
-		<script type="module" data-hydrate="1qtfe9m">
-		import { start } from "/jw-guitar-tabs/internal/start-828a8007.js";
+		<script type="module" data-hydrate="1xvqkll">
+		import { start } from "/jw-guitar-tabs/internal/start-ed0ae0be.js";
 		start({
-			target: document.querySelector('[data-hydrate="1qtfe9m"]').parentNode,
+			target: document.querySelector('[data-hydrate="1xvqkll"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
@@ -157,8 +163,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-60207e75.js"),
-						import("/jw-guitar-tabs/internal/pages/settings.svelte-29867e5c.js")
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-d4f3000a.js"),
+						import("/jw-guitar-tabs/internal/pages/settings.svelte-94157d97.js")
 				],
 				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/settings"),
 				params: {}
